# dblite

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs  store.rs
